--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "API REST FUll Express utilizando padrão MVC, aplicando conceitos do S.O.L.I.D ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/app.js"
   },
   "author": "Gabriel Júnio P. Vogais",
   "license": "ISC",
   "devDependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mysql2": "^3.11.4",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "sequelize": "^6.37.5"
   }
 }
